# basic-game

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: untitled.glb  untitled.gltf
src/: game.cpp  game.h  gui.cpp  gui.h  humanoid.h  items.h  main.cpp  maps.h  monster.cpp  monster.h  projectile.cpp  projectile.h  settings.cpp  settings.h  tower.cpp  tower.h
src/assets/: crow.gltf
src/ecs/: attack.h  combat_system.cpp  combat_system.h  entity.h
